methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:2: error: Missing closing brace `}' assumed here
var caseVerte = false
^SlugTracking:2: error: expected class or object definition
var caseVerte = false
^SlugTracking:4: error: expected class or object definition
def isFacingTrail():Boolean = {
^